:recycle: rewrite
