# main.go
@@ -1,124 +1,100 @@
 package main
 
 import (
+	"context"
 	"embed"
+	"flag"
+	"fmt"
 	"log"
 	"net/http"
-	_ "net/http/pprof"
-	"os"
-	"runtime/pprof"
+	"os/signal"
+	"syscall"
+	"time"
 
-	"github.com/MarceloPetrucio/go-scalar-api-reference"
 	"github.com/joho/godotenv"
-	"github.com/labstack/echo/v4"
-	"github.com/labstack/echo/v4/middleware"
-	"github.com/nrmnqdds/gomaluum-api/controllers"
-	services "github.com/nrmnqdds/gomaluum-api/services/catalogs"
+	"github.com/nrmnqdds/gomaluum/internal/server"
 )
 
 //go:embed docs/*
 var DocsPath embed.FS
 
-func main() {
-	f, err := os.Create("cpu.pprof")
-	if err != nil {
-		panic(err)
-	}
-	if err := pprof.StartCPUProfile(f); err != nil {
-		panic(err)
-	}
-	defer pprof.StopCPUProfile()
+func gracefulShutdown(apiServer *http.Server, done chan bool) {
+	// Create context that listens for the interrupt signal from the OS.
+	ctx, stop := signal.NotifyContext(context.Background(), syscall.SIGINT, syscall.SIGTERM)
+	defer stop()
 
-	if os.Getenv("APP_ENV") == "development" {
+	// Listen for the interrupt signal.
+	<-ctx.Done()
+
+	log.Println("shutting down gracefully, press Ctrl+C again to force")
+
+	// The context is used to inform the server it has 5 seconds to finish
+	// the request it is currently handling
+	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
+	defer cancel()
+	if err := apiServer.Shutdown(ctx); err != nil {
+		log.Printf("Server forced to shutdown with error: %v", err)
+	}
+
+	log.Println("Server exiting")
+
+	// Notify the main goroutine that the shutdown is complete
+	done <- true
+}
+
+// @title           Gomaluum API Server
+// @version         2.0
+// @description     This is the API server for Gomaluum, an API that serves i-Ma'luum data for ease of developer.
+// @termsOfService  http://swagger.io/terms/
+
+// @contact.name   Quddus
+// @contact.url    http://www.swagger.io/support
+// @contact.email  ceo@nrmnqdds.com
+
+// @license.name  Apache 2.0
+// @license.url   http://www.apache.org/licenses/LICENSE-2.0.html
+func main() {
+	// Define mode flags
+	var dev bool
+	var prod bool
+	flag.BoolVar(&dev, "d", false, "run in development mode")
+	flag.BoolVar(&prod, "p", false, "run in production mode")
+	flag.Parse()
+
+	// Check if exactly one mode is selected
+	if !dev && !prod {
+		log.Fatal("Error: Must specify either development (-d) or production (-p) mode")
+	}
+	if dev && prod {
+		log.Fatal("Error: Cannot specify both development (-d) and production (-p) mode")
+	}
+
+	if dev {
 		err := godotenv.Load()
 		if err != nil {
 			log.Fatal("Error reading .env file!")
 		}
-		log.Println("Loaded .env file")
-	}
-	e := echo.New()
-
-	// CORS
-	e.Use(middleware.CORSWithConfig(middleware.CORSConfig{
-		AllowOrigins: []string{"*"},
-		AllowMethods: []string{http.MethodGet, http.MethodPost},
-		AllowHeaders: []string{echo.HeaderOrigin, echo.HeaderContentType, echo.HeaderAccept},
-	}))
-
-	e.Use(middleware.LoggerWithConfig(middleware.LoggerConfig{
-		Format: "[${time_rfc3339}] ${status} ${method} ${path} (${remote_ip}) ${latency_human}\n",
-		Output: e.Logger.Output(),
-	}))
-
-	// e.Use(middleware.RateLimiter(middleware.NewRateLimiterMemoryStore(rate.Limit(20))))
-
-	// This middleware is used to recover from panics anywhere in the chain, log the panic (and a stack trace), and set a status code of 500.
-	e.Use(middleware.Recover())
-
-	e.GET("/", func(c echo.Context) error {
-		return c.Redirect(http.StatusMovedPermanently, "/reference")
-	})
-
-	e.GET("/reference", func(c echo.Context) error {
-		swaggerPath, err := DocsPath.ReadFile("docs/swagger/swagger.json")
-		if err != nil {
-			log.Fatalf("could not read swagger.json: %v", err)
-		}
-		scalarMetadataPath, err := DocsPath.ReadFile("docs/scalar-metadata.json")
-		if err != nil {
-			log.Fatalf("could not read scalar-metadata.json: %v", err)
-		}
-
-		htmlContent, err := scalar.ApiReferenceHTML(&scalar.Options{
-			SpecContent: string(swaggerPath),
-			CustomOptions: scalar.CustomOptions{
-				PageTitle: "GoMaluum API Reference",
-			},
-			MetaData: string(scalarMetadataPath),
-			DarkMode: true,
-		})
-		if err != nil {
-			log.Fatalf("Error initializing scalar: %v", err)
-		}
-
-		htmlBlob := []byte(htmlContent)
-
-		return c.HTMLBlob(http.StatusOK, htmlBlob)
-	})
-
-	e.GET("/ping", func(c echo.Context) error {
-		return c.String(http.StatusOK, "pong")
-	})
-
-	g := e.Group("/api")
-
-	g.POST("/login", controllers.LoginHandler)
-
-	g.GET("/profile", controllers.GetProfileHandler)
-
-	// Schedule
-	g.GET("/schedule", controllers.GetScheduleHandler)
-	g.POST("/schedule", controllers.PostScheduleHandler)
-
-	// Result
-	g.GET("/result", controllers.GetResultHandler)
-	g.POST("/result", controllers.PostResultHandler)
-
-	// Catalog
-	services.DocsPath = DocsPath
-	g.GET("/catalog", controllers.CatalogHandler)
-
-	// Ads
-	g.GET("/ads", controllers.AdsHandler)
-
-	PORT := "1323"
-
-	if os.Getenv("PORT") != "" {
-		PORT = os.Getenv("PORT")
+		log.Println(".env file loaded")
+		log.Println("Running in development mode")
+	} else {
+		log.Println("Running in production mode")
 	}
 
-	if err := e.Start(":" + PORT); err != nil {
-		log.Fatalf("could not start server: %v", err)
+	server.DocsPath = DocsPath
+	server := server.NewServer(1323)
+
+	// Create a done channel to signal when the shutdown is complete
+	done := make(chan bool, 1)
+
+	// Run graceful shutdown in a separate goroutine
+	go gracefulShutdown(server, done)
+
+	err := server.ListenAndServe()
+	if err != nil && err != http.ErrServerClosed {
+		panic(fmt.Sprintf("http server error: %s", err))
 	}
-	log.Println("App Server started")
+
+	// Wait for the graceful shutdown to complete
+	<-done
+	log.Println("Graceful shutdown complete.")
 }
